--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>JavaStudynotes</groupId>
-    <artifactId>com.xzy.thinking</artifactId>
+    <artifactId>com.xzy.learning</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
