--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
     <artifactId>JavaStudyNotes</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- cglib相关jar包 -->
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <plugins>
