--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,21 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.13.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.spy/spymemcached -->
+        <dependency>
+            <groupId>net.spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.12.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.coreos/jetcd-core -->
+        <dependency>
+            <groupId>com.coreos</groupId>
+            <artifactId>jetcd-core</artifactId>
+            <version>0.0.2</version>
+        </dependency>
+
     </dependencies>
 
 
